# stellar-land-registry

./: .gitignore  Cargo.toml  README.md
contracts/notes/src/: lib.rs
src/: test.rs
